--- a/WebScraper/WebScraper.csproj
+++ b/WebScraper/WebScraper.csproj
@@ -33,6 +33,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -42,6 +43,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bolsar\BolsarScraper.cs" />
+    <Compile Include="Bolsar\Models\JsonDataResult.cs" />
+    <Compile Include="Bolsar\Models\Operation.cs" />
     <Compile Include="Bolsar\Models\ReqPayload.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
